chore: use request body with name for record text in validation endpoint
